--- a/scss/_social.scss
+++ b/scss/_social.scss
@@ -34,25 +34,14 @@
     height: 30px;
     transform: rotate(45deg);
     transition: .5s ease-out;
+    color: gray;
   }
 
-  a:nth-child(1) i {
-    color: gray;
-  }
-  a:nth-child(2) i {
-    color: var(--main);
-  }
   a:nth-child(3) i {
     color: transparent;
-    background-image: linear-gradient(45deg, var(--main), #b7a8e7, #735acf);
+    background-image: linear-gradient(45deg, white, gray);
     -webkit-background-clip: text;
     font-weight: 600;
-  }
-  a:nth-child(4) i {
-    color: var(--main);
-  }
-  a:nth-child(5) i {
-    color: gray;
   }
   a:hover {
     transform: translate(-130px, 0);
