--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -24,7 +24,7 @@
   }
   
   i{
-    
+    width: 26px;
     color: var(--main);
     animation: latidos 800ms ease-out infinite alternate;
   }
@@ -64,8 +64,8 @@
     &_line {
       display: block;
       position: relative;
-      background: var(--main);
-      height: 2px;
+      background: white;
+      height: 1px;
       width: 20px;
       border-radius: 4px;
       transition: background 0.8s ease;
@@ -77,7 +77,7 @@
         height: 100%;
         width: 100%;
         border-radius: 4px;
-        background: var(--main);
+        background: white;
         transition: background 0.8s ease;
       }
       &::before {
