--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -114,6 +114,9 @@
 
         &:hover {
           transform: scale(0.95);
+          @media (width <=800px) {
+            transition: none;
+          }
 
           a p {
             color: var(--main);
@@ -124,6 +127,9 @@
             cursor: pointer;
             // border: solid 1px var(--main);
             transition: .5s;
+            @media (width <=800px) {
+              transition: none;
+            }
           }
         }
 
@@ -208,8 +214,10 @@
 }
 
 .pf {
+  width: 32px;
+  height: 32px;
   top: 47%;
-  left: 96%;
+  left: 95%;
   -webkit-transform: rotate(316deg);
   border-right: 2px var(--main) solid;
   border-bottom: 2px var(--main) solid;
@@ -226,7 +234,7 @@
 }
 
 .prev {
-  left: 4%;
+  left: 5%;
    -webkit-transform: rotate(134deg);
   @media (width <=800px) {
     display: none;
@@ -238,7 +246,6 @@
   @media (width <=800px) {
     display: block;
     position: absolute;
-    z-index: 9999;
     bottom: 30%;
     font-size: larger;
     right: 12%;
@@ -281,7 +288,7 @@
   overflow: hidden;
   height: 80%;
   width: 70%;
-  border-radius: 30px;
+  border-radius: 20px;
   -webkit-animation-name: animarsuperior;
   -webkit-animation-duration: 0.5s;
   animation-name: animarsuperior;
@@ -315,12 +322,13 @@
   margin: unset;
   padding: unset;
   background: none;
-  color: gray;
+  color: white;
 }
 
 .contenedor-modal-descripcion p {
+  margin-top: 26px;
   text-align: left;
-  color: white;
+  color: gray;
 }
 
 .techs {
@@ -368,7 +376,7 @@
 }
 
 #modal-preview-shadow {
-  //background: linear-gradient(to top, #000000, #011b18 23%, transparent 60%);
+  background: linear-gradient(to top, #000000, #292c32 23%, transparent 60%);
   height: 100%;
   width: 100%;
   position: absolute;
@@ -376,8 +384,8 @@
 
 .modal-preview-enlaces {
   position: absolute;
-  bottom: 14%;
-  right: 13%;
+  bottom: 15%;
+  right: 8%;
 
   @media screen and (max-width: 480px) {
     right: inherit;
@@ -387,15 +395,17 @@
 .modal-preview-enlaces a {
   padding: 14px 28px;
   border: 1px solid;
-  border-radius: 12px;
+  border-radius: 6px;
   background: var(--secondary);
   text-decoration: none;
   font-weight: 600;
   color: var(--main);
   margin-left: 10px;
   box-shadow: 0px 9px 7px rgba(9, 29, 34, 0.64);
+  transition: all .3s ease-in;
 
   &:hover {
+    
     background: var(--main);
     color: var(--secondary);
     border: 1px solid var(--main);
@@ -462,7 +472,7 @@
 
 .cerrar {
   position: relative;
-  color: var(--main);
+  color: gray;
   text-shadow: 0px 9px 7px rgb(9 29 34 / 64%);
   bottom: 77%;
   left: 31%;
@@ -478,7 +488,7 @@
 
 .cerrar:hover,
 .cerrar:focus {
-  color: var(--secondary);
+  color: var(--main);
   text-decoration: none;
   cursor: pointer;
 }
