--- a/scss/_social.scss
+++ b/scss/_social.scss
@@ -1,9 +1,9 @@
 .social {
   z-index: 4;
   position: fixed;
-  bottom: 33vh;
+  bottom: 30vh;
   right: 0;
-  height: 100vh;
+  
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -11,6 +11,9 @@
   transform: translate(250px);
   transition: 2s ease-out;
   opacity: 0;
+  @media (width <=800px) {
+    bottom: 4vh;
+  }
   a {
     color: #fff;
     background: rgba(0, 0, 0, 0.7);
@@ -38,10 +41,9 @@
   }
 
   a:nth-child(3) i {
-    color: transparent;
-    background-image: linear-gradient(45deg, white, gray);
-    -webkit-background-clip: text;
-    font-weight: 600;
+  }
+  a:nth-child(5) i {
+    color: var(--main);
   }
   a:hover {
     transform: translate(-130px, 0);
