--- a/scss/_skillset.scss
+++ b/scss/_skillset.scss
@@ -34,6 +34,9 @@
         .iconoskill {
           font-size: 3rem;
           color: white;
+          @media screen and (max-width: 760px) {
+            font-size: 2.3rem;
+          }
         }
         
         span {
