--- a/scss/_social.scss
+++ b/scss/_social.scss
@@ -67,6 +67,7 @@
     right: calc(50vw - 140px);
     flex-direction: unset;
     transform: translate(0px);
+    z-index: 99;
     a {
       margin: 3px;
       font-size: 0;
