--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -62,6 +62,7 @@
     overflow: hidden;
     text-align: center;
     width: 100%;
+    
 
     @media screen and (max-width: 886px) {
       height: inherit;
@@ -72,6 +73,13 @@
       }
     }
 
+  }
+  #particles-js{
+    width: 100%;
+  position: absolute;
+  top: 0;
+  height: -webkit-fill-available;
+  z-index: 1;
   }
 
   .banner-content {
