--- a/css/main.css
+++ b/css/main.css
@@ -598,7 +598,7 @@
   outline: none !important;
   border-radius: 50%;
   margin-top: 0 5px;
-  border: 1px solid var(--main) !important;
+  border: 2px solid var(--main) !important;
   transition: all 0.5s ease;
   text-shadow: 0 19px 38px rgba(79, 225, 208, 0.3), 0 15px 12px rgba(79, 225, 208, 0.22);
   -webkit-box-reflect: below 0.2rem linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.2));
@@ -921,6 +921,11 @@
   background: rgba(255, 255, 255, 0.1);
   transition: all 0.4s ease-in-out;
 }
+@media screen and (max-width: 480px) {
+  .about-me .about-me_texto #texto {
+    border-radius: 20px;
+  }
+}
 .about-me .about-me_texto #texto#texto:hover {
   transform: scale(1.025);
 }
@@ -940,6 +945,12 @@
   padding: 9%;
   font-size: calc(0.9rem + 0.2vw);
   animation: aparece 2s;
+}
+.about-me .about-me_texto .fa-caret-left {
+  position: absolute;
+  left: 15px;
+  bottom: 11px;
+  color: var(--main);
 }
 @media screen and (min-width: 1020px) {
   .about-me {
