--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,32 +12,43 @@
 @import "footer";
 @import "preloader";
 
-:root{
-  --main:#4fe1d0; 
-  --secondary:#040404;
-  --tertiary:#2f2f2f;
-  --quaternary:#fff;
-  --yellow:#e1dc4f;
+:root {
+  --main: #4fe1d0;
+  --secondary: #040404;
+  --tertiary: #2f2f2f;
+  --quaternary: #fff;
+  --yellow: #e1dc4f;
 }
-html, body { 
-  scroll-behavior: smooth
+
+html,
+body {
+  scroll-behavior: smooth;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 * {
- 
-  
+
+
   ::-webkit-scrollbar {
     display: none;
-    
+
   }
+
   box-sizing: border-box;
 
   margin: 0;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
-  h2,h3,h4,p,li{
+  font-family: "Montserrat",
+  sans-serif;
+
+  h2,
+  h3,
+  h4,
+  p,
+  li {
     font-family: 'Karla', sans-serif;
   }
+
   h3 {
     text-transform: uppercase;
     color: white;
@@ -50,5 +61,3 @@ html, body {
     padding-right: 10%;
   }
 }
-
-
