modal size height increment

--- a/css/main.css
+++ b/css/main.css
@@ -509,6 +509,7 @@
   padding: 15px 40px;
   margin: auto;
   width: max-content;
+  cursor: grab;
   transition: all 0.8s ease;
 }
 @media (width >= 800px) {
@@ -657,7 +658,7 @@
   /* Posición fija */
   z-index: 9999;
   /* Se situará por encima de otros elementos de la página*/
-  padding-top: 140px;
+  padding-top: 90px;
   /* El contenido estará situado a 200px de la parte superior */
   left: 0;
   top: 0;
@@ -679,7 +680,7 @@
   margin: auto;
   /* Centrada */
   overflow: hidden;
-  height: 80%;
+  height: 90%;
   width: 70%;
   border-radius: 20px;
   -webkit-animation-name: animarsuperior;
@@ -856,7 +857,7 @@
   position: relative;
   color: gray;
   text-shadow: 0px 9px 7px rgba(9, 29, 34, 0.64);
-  bottom: 77%;
+  bottom: 85%;
   left: 31%;
   font-size: 30px;
   font-weight: bold;
