--- a/scss/_about-me.scss
+++ b/scss/_about-me.scss
@@ -19,7 +19,7 @@
     width: 25vw;
     animation-name: imgChanger;
     animation-duration: 1s;
-    cursor: pointer;
+    cursor: unset;
     // top: 15vh;
   }
 
