--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -87,13 +87,11 @@
       margin: auto;
       width: max-content;
       //text-align: center;
-      cursor: grab;
       transition: all .8s ease;
-      &:active {
-        cursor: grabbing;
-      }
+      
 
       @media (width >=800px) {
+        
         &:hover {
           background: rgba(0, 0, 0, 0);
           
@@ -114,20 +112,26 @@
 
         @media (width >=800px) {
           transition: .8s;
-          &:hover {
+          cursor: grab;
+          &:active {
+            cursor: grabbing;
+          }
+          & img:hover {
+            
             transform: scale(0.95);
             a p {
               color: var(--main);
             }
-
-            img {
-              // box-shadow: 0 0 10px var(--main);
-              cursor: pointer;
-              // border: solid 1px var(--main);
-              transition: .5s;
-
-            }
           }
+          img {
+              
+            // box-shadow: 0 0 10px var(--main);
+            cursor: pointer;
+            // border: solid 1px var(--main);
+            transition: .5s;
+
+          }
+          
         }
 
         .text {
@@ -138,6 +142,7 @@
         }
 
         img {
+          transition: .8s;
           height: 250px;
           width: 250px;
           object-fit: cover;
@@ -388,19 +393,19 @@
   padding: 14px 28px;
   border: 1px solid;
   border-radius: 6px;
-  background: var(--secondary);
+  background: linear-gradient(179deg, var(--secondary) 50%, transparent);
   text-decoration: none;
   font-weight: 600;
   color: var(--main);
   margin-left: 10px;
-  box-shadow: 0px 9px 7px rgba(9, 29, 34, 0.64);
+  box-shadow: 0 19px 38px rgba(79, 225, 208, 0.1), 0 15px 12px rgba(79, 225, 208, 0.05);
   transition: all .3s ease-in;
 
   &:hover {
-
     background: var(--main);
     color: var(--secondary);
     border: 1px solid var(--main);
+    box-shadow: 0 19px 38px rgba(79, 225, 208, 0.30), 0 15px 12px rgba(79, 225, 208, 0.22);
   }
 }
 
